Closed Bug 2017927 Opened 4 months ago Closed 3 months ago

Not all ike modes are FIPS approved. Adjust the indicators when they aren't

Categories

(NSS :: Libraries, defect, P3)

Tracking

(nss 3.122)

RESOLVED FIXED
Tracking Status
nss --- 3.122

People

(Reporter: rrelyea, Assigned: rrelyea)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Not all ike modes are FIPS approved. Adjust the indicators when they aren't

Assignee: nobody → rrelyea
Blocks: 2017787
Severity: -- → S3
Priority: -- → P3
Status: NEW → ASSIGNED

ikev1 isn't approved. If we use ike_prf (only) in ikev1 mode then turn
off the FIPS indicator.

This case is bDataAsKey=PR_FALSE and bRekey=PR_FALSE;

Pushed by rrelyea@redhat.com:
https://hg.mozilla.org/projects/nss/rev/cc6d5cd18dc0
Not all ike modes are FIPS approved. Adjust the indicators when they aren't

Status: ASSIGNED → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: