Bug 2017927 Not all ike modes are FIPS approved. Adjust the indicators when they aren't

ikev1 isn't approved. If we use ike_prf (only) in ikev1 mode then turn
off the FIPS indicator.

This case is bDataAsKey=PR_FALSE and bRekey=PR_FALSE;

Differential Revision: https://phabricator.services.mozilla.com/D284778

--HG--
extra : rebase_source : f975990ab2c83de94cf57f8a8704d0217fcf30e0